# udp_server

./: .gitignore  CMakeLists.txt  main  main.c
data/page/: cart.html  index.html  products.html
inc/: socket_utils.h  udp_web_server.h
lib/socket_utils/: socket_utils.c
src/: main.c  udp_web_server.c
src/output/: main
src/output/main.dSYM/Contents/Resources/DWARF/: main
src/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
webserver/: udp_web_server.c
webserver/page/: account.html  product-details.html  style.css
